dark mode fixing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4754,7 +4754,7 @@ p {
     11.FOOTER css 
 ===========================*/
 .footer-area {
-  background: #101e3b;
+  background:var(--footer-bg);
   position: relative;
 }
 
